# jumpAndRunGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rebuild.sh
res/shaders/: basic.shader
src/: IndexBuffer.cpp  IndexBuffer.hpp  Logger.cpp  Logger.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp  logger.cpp  logger.cxx  logger.hpp  logger.ixx  main.cpp
